ssip4/static/sass/_home.sass
nav.nav-phone
  @include media-breakpoint-up(md)
    display: none

nav.nav-desktop
  display: none
  @include make-row()
  @include media-breakpoint-up(md)
    display: flex

  flex-flow: row nowrap
  justify-content: space-between

  ul
    display: flex
    flex-flow: row wrap
    justify-content: flex-end
    align-content: space-between

    a
      color: white
      font-weight: 700
      text-transform: uppercase
      text-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.5)
      &:hover
        color: #fff
        text-shadow: none
        background: #DC322F
        border-radius: 1.5rem


/// --- splash 

.splash
  background: linear-gradient(rgba(15, 33, 43, 0.4), rgba(15, 33, 43, 0.4)), url("../images/ssipsplash.jpg")
  background-size: cover
  background-position: 50% 60%
  text-shadow: 1px 1px 0px rgba(0,0,0,0.5);
  color: #fff
  @include media-breakpoint-up(md)
    padding: 1rem 0 2rem 0

  .logo
    font-family: 'Lato'
    font-size: 40px
    font-weight: 700
    letter-spacing: -2px
    word-spacing: -1px
    flex: 1 0 220px
    line-height: 1rem
    padding-top: 0.5rem

    
  .hero
    @include make-row()
    display: flex
    flex-flow: column nowrap
    justify-content: center
    font-family: 'Roboto Slab', serif
    min-height: 300px
    text-align: center
    padding-bottom: 2rem
    @include media-breakpoint-up(md)
      justify-content: end
      text-align: left
      min-height: 400px

    h1
      font-weight: 600

    p
      font-weight: 400

    .lead
      font-family: 'Roboto', sans-serif
      letter-spacing: 0

// --- spash over


// --- homepage news

.news-phone
  padding-top: 2rem
  @include media-breakpoint-up(lg)
    display: none

.news-desktop
  display: none
  @include media-breakpoint-up(lg)
    display: block

